Created basic business logic and input validations Modified views and controllers to accept input parameters to create entries and categories

--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -9,4 +9,14 @@
     <%= entry.user_id %>
   </p>
 
+  <p>
+    <strong>Amount:</strong>
+    <%= entry.amount %>
+  </p>
+
+  <p>
+    <strong>Categories:</strong>
+    <%= entry.categories.map(&:name).join(', ') %>
+  </p>
+
 </div>
