--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -8,10 +8,10 @@
     <strong>Icon:</strong>
     <%= category.icon %>
   </p>
-
+  
   <p>
-    <strong>User:</strong>
-    <%= category.user_id %>
+    <strong>Entries:</strong>
+    <%= category.entries.map(&:name).join(', ') %>
   </p>
 
 </div>
