Added rubocop Added cancan authorization and redirect when not authorized Fixed n+1 queries Updated styling of devise views

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Budget</h1>
-<p>Welcome to Budget, a simple budgeting app.</p>
+<div>
+  <div>
+    <h1>Budget</h1>
+    <p>Welcome to Budget, a simple budgeting app.</p>
+  </div>
+  <div>
+    <p>
+      <%= link_to "Sign in", new_user_session_path, class:"btn btn-primary" %>
+      <%= link_to "Sign up", new_user_registration_path, class:"btn btn-ligth" %>
+    </p>
+  </div>
+</div>
