--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div>
     <%= form.label :category_ids, style: "display: block" %>
-    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name, prompt: "Select a category", class: "form-control" %>
+    <%= form.collection_check_boxes :category_ids, categories, :id, :name, prompt: "Select a category", class: "form-control" %>
   </div>
 
   <div>
