--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,34 @@
   </head>
 
   <body>
-    <div>
-      <% if user_signed_in? %>
-        <%= link_to "Sign out", destroy_user_session_path, method: :delete, 'data-turbo-method': :delete %>
-      <% else %>
-        <%= link_to "Sign in", new_user_session_path %>
-      <% end %>
-    </div>
-    <div>
+    <header>
+      <nav class="navbar navbar-dark bg-primary">
+        <div class="container">
+          <a class="navbar-brand" href="/">Budget</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <%= link_to "Entries", entries_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Categories", categories_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <% if user_signed_in? %>
+                <%= link_to "Sign out", destroy_user_session_path, method: :delete, 'data-turbo-method': :delete , class: "nav-link" %>
+              <% else %>
+                <%= link_to "Sign in", new_user_session_path , class: "nav-link" %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div class='container'>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     <div>
-    <%= yield %>
+    <main class="container">
+      <%= yield %>
+    </main>
   </body>
 </html>
