Added icon emojis for categories Added param verification to create transactions prefilled with the category route when coming from a category index Added conditional redirect based on origin of request for entries and categories Rename Entries to Transaction on the frontend Added root based on user authentication

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,7 +8,10 @@
     <p>
       <%= link_to "Show this category", category %>
     </p>
+    <p>
+      <%= link_to "Show all transactions", category_entries_path(category) %>
+    </p>
   <% end %>
 </div>
 
-<%= link_to "New category", new_category_path %>
+<%= link_to "Add new category", new_category_path, class:'btn btn-primary' %>
