--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -14,4 +14,9 @@
     <%= category.entries.map(&:name).join(', ') %>
   </p>
 
+  <p>
+    <strong>Total spent</strong>
+    <%= category.entries.sum(:amount) %>
+  </p>
+
 </div>
