--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing entry</h1>
+<h1>Editing transaction</h1>
 
 <%= render "form", entry: @entry %>
 
 <br>
 
 <div>
-  <%= link_to "Show this entry", @entry %> |
-  <%= link_to "Back to entries", entries_path %>
+  <%= link_to "Show this transaction", @entry %> |
+  <%= link_to "Back to transactions", entries_path %>
 </div>
