--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to transactions", entries_path %>
+  <%= link_to "Back to transactions", entries_path, class: "btn btn-link" %>
 </div>
