--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this category", @category %> |
-  <%= link_to "Back to categories", categories_path %>
+  <%= link_to "Show this category", @category, class: 'btn btn-link' %> |
+  <%= link_to "Back to categories", categories_path, class: 'btn btn-link' %>
 </div>
