--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,14 +3,18 @@
 <h1>Categories</h1>
 
 <div id="categories">
-  <% @categories.each do |category| %>
-    <%= render category %>
-    <p>
-      <%= link_to "Show this category", category %>
-    </p>
-    <p>
-      <%= link_to "Show all transactions", category_entries_path(category) %>
-    </p>
+  <% if @categories.empty? %>
+    <p>No categories yet</p>
+  <% else %>
+    <% @categories.each do |category| %>
+      <div class='border rounded bg-white p-4 mb-4'>
+        <%= render category %>
+        <div>
+          <%= link_to "Show this category", category %> |
+          <%= link_to "Show all transactions", category_entries_path(category) %>
+        </div>
+      </div>
+    <% end %>
   <% end %>
 </div>
 
