--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,10 +1,8 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @category %>
 
 <div>
-  <%= link_to "Edit this category", edit_category_path(@category) %> |
-  <%= link_to "Back to categories", categories_path %>
+  <%= link_to "Edit this category", edit_category_path(@category), class: 'btn btn-link' %> |
+  <%= link_to "Back to categories", categories_path, class: 'btn btn-link' %>
 
-  <%= button_to "Destroy this category", @category, method: :delete %>
+  <%= button_to "Destroy this category", @category, method: :delete, class: 'btn btn-danger' %>
 </div>
