--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>Editing transaction</h1>
 
-<%= render "form", entry: @entry %>
+<%= render "form", entry: @entry, categories: @categories %>
 
 <br>
 
 <div>
-  <%= link_to "Show this transaction", @entry %> |
-  <%= link_to "Back to transactions", entries_path %>
+  <%= link_to "Show this transaction", @entry , class: "btn btn-link" %>
+  <%= link_to "Back to transactions", entries_path , class: "btn btn-link" %>
 </div>
