--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,4 +1,4 @@
-  <th scope="row"><%= entry.name %></th>
+  <th scope="row"><%= link_to "#{entry.name}", entry_path(entry) %></th>
   <td>$ <%= entry.amount %></td>
   <td><% entry.categories.each do |category| %>
     <%= link_to category.name, category_path(category) %>
