--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,6 +1,23 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @entry %>
+<h1>Transaction</h1>
+
+<p>
+  <strong>Name:</strong>
+  <%= @entry.name %>
+</p>
+
+<p>
+  <strong>Amount:</strong>
+  $ <%= @entry.amount %>
+</p>
+
+<p>
+  <strong>Categories:</strong>
+  <% @entry.categories.each do |category| %>
+    <%= link_to category.name, category_path(category) %>
+  <% end %>
+</p>
 
 <div>
   <%= link_to "Edit this entry", edit_entry_path(@entry), class: 'btn btn-link' %> |
