--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -11,14 +11,14 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="mb-4">
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, placeholder: 'Name', class: 'form-control' %>
   </div>
 
-  <div>
-    <%= form.label :icon, style: "display: block" %>
-    <%= form.select :icon, @icons%>
+  <div class="mb-4">
+    <%= form.label :icon, class: 'form-label' %>
+    <%= form.select :icon, icons, {}, class: 'form-select-lg bg-white fs-1' %>
   </div>
 
   <div>
