--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing category</h1>
 
-<%= render "form", category: @category %>
+<%= render "form", category: @category, icons: @icons %>
 
 <br>
 
