--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New category</h1>
 
-<%= render "form", category: @category %>
+<%= render "form", category: @category, icons: @icons %>
 
 <br>
 
