--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div>
     <p>
-      <%= link_to "Sign in", new_user_session_path, class:"btn btn-primary" %>
+      <%= link_to "Sign in", new_user_session_path, class:"btn btn-success" %>
       <%= link_to "Sign up", new_user_registration_path, class:"btn btn-ligth" %>
     </p>
   </div>
