--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div>
-    <%= form.submit 'Save', class: 'btn btn-primary' %>
+    <%= form.submit 'Save', class: 'btn btn-success' %>
   </div>
 <% end %>
