--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,4 +18,4 @@
   <% end %>
 </div>
 
-<%= link_to "Add new category", new_category_path, class:'btn btn-primary' %>
+<%= link_to "Add new category", new_category_path, class:'btn btn-success' %>
