--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,7 +42,7 @@
             </div>
 
             <div class="form-group">
-              <%= f.submit "Update", class: "btn btn-primary" %>
+              <%= f.submit "Update", class: "btn btn-success" %>
             </div>
           <% end %>
         </div>
